--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           <div class="row g-5">
             <div class="col-xl-3 col-lg-4 col-sm-6">
               <div class="card h-100">
-                <img src="images/orange-7669963_640.jpg" class="card-img-top p-3 rounded"  alt="oranges">
+                <img src="images/banana.jpg" class="card-img-top p-3 rounded"  alt="oranges">
                 <div class="card-body text-center">
                   <div class="rating">
                     <span><i class="fa-solid fa-star"></i></span>
@@ -278,6 +278,9 @@
                       <span class="text-danger">$6.5</span>
                     </div>
                   </p>
+                  <div class="input mb-2">
+                    <input type="number" placeholder="Amount">
+                  </div>
                   <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                     <span class="material-symbols-outlined">
                     add_shopping_cart
@@ -288,7 +291,8 @@
             </div>
             <div class="col-xl-3 col-lg-4 col-sm-6">
               <div class="card h-100">
-                <img src="images/orange-7669963_640.jpg" class="card-img-top p-3 rounded" alt="oranges">
+                
+                <img src="images/drink-4475363_640.jpg" class="card-img-top p-3 rounded" alt="oranges">
                 <div class="card-body text-center">
                   <div class="rating">
                     <span><i class="fa-solid fa-star"></i></span>
@@ -304,6 +308,9 @@
                       <span class="text-danger">$6.5</span>
                     </div>
                   </p>
+                  <div class="input mb-2">
+                    <input type="number" placeholder="Amount">
+                  </div>
                   <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                     <span class="material-symbols-outlined">
                     add_shopping_cart
@@ -314,7 +321,7 @@
             </div>
             <div class="col-xl-3 col-lg-4 col-sm-6">
               <div class="card h-100">
-                <img src="images/orange-7669963_640.jpg" class="card-img-top p-3 rounded" alt="oranges">
+                <img src="images/food-1898194_640.jpg" class="card-img-top p-3 rounded" alt="oranges">
                 <div class="card-body text-center">
                   <div class="rating">
                     <span><i class="fa-solid fa-star"></i></span>
@@ -330,6 +337,9 @@
                       <span class="text-danger">$6.5</span>
                     </div>
                   </p>
+                  <div class="input mb-2">
+                    <input type="number" placeholder="Amount">
+                  </div>
                   <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                     <span class="material-symbols-outlined">
                     add_shopping_cart
@@ -340,7 +350,7 @@
             </div>
             <div class="col-xl-3 col-lg-4 col-sm-6">
               <div class="card h-100">
-                <img src="images/orange-7669963_640.jpg" class="card-img-top p-3 rounded" alt="oranges">
+                <img src="images/sambosa.jpg" class="card-img-top p-3 rounded" alt="oranges">
                 <div class="card-body text-center">
                   <div class="rating">
                     <span><i class="fa-solid fa-star"></i></span>
@@ -356,6 +366,9 @@
                       <span class="text-danger">$6.5</span>
                     </div>
                   </p>
+                  <div class="input mb-2">
+                    <input type="number" placeholder="Amount">
+                  </div>
                   <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                     <span class="material-symbols-outlined">
                     add_shopping_cart
@@ -425,6 +438,9 @@
                       <span class="text-danger">$6.5</span>
                     </div>
                   </p>
+                  <div class="input mb-2">
+                    <input type="number" placeholder="Amount">
+                  </div>
                   <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                     <span class="material-symbols-outlined">
                     add_shopping_cart
@@ -457,6 +473,9 @@
                       <span class="text-danger">$6.5</span>
                     </div>
                   </p>
+                  <div class="input mb-2">
+                    <input type="number" placeholder="Amount">
+                  </div>
                   <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                     <span class="material-symbols-outlined">
                     add_shopping_cart
@@ -489,6 +508,9 @@
                       <span class="text-danger">$6.5</span>
                     </div>
                   </p>
+                  <div class="input mb-2">
+                    <input type="number" placeholder="Amount">
+                  </div>
                   <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                     <span class="material-symbols-outlined">
                     add_shopping_cart
@@ -521,6 +543,9 @@
                       <span class="text-danger">$6.5</span>
                     </div>
                   </p>
+                  <div class="input mb-2">
+                    <input type="number" placeholder="Amount">
+                  </div>
                   <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                     <span class="material-symbols-outlined">
                     add_shopping_cart
@@ -553,6 +578,9 @@
                       <span class="text-danger">$6.5</span>
                     </div>
                   </p>
+                  <div class="input mb-2">
+                    <input type="number" placeholder="Amount">
+                  </div>
                   <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                     <span class="material-symbols-outlined">
                     add_shopping_cart
@@ -585,6 +613,9 @@
                       <span class="text-danger">$6.5</span>
                     </div>
                   </p>
+                  <div class="input mb-2">
+                    <input type="number" placeholder="Amount">
+                  </div>
                   <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                     <span class="material-symbols-outlined">
                     add_shopping_cart
@@ -653,6 +684,9 @@
                         <span class="text-danger">$6.5</span>
                       </div>
                     </p>
+                    <div class="input mb-2">
+                      <input type="number" placeholder="Amount">
+                    </div>
                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                       <span class="material-symbols-outlined">
                       add_shopping_cart
@@ -679,6 +713,9 @@
                         <span class="text-danger">$6.5</span>
                       </div>
                     </p>
+                    <div class="input mb-2">
+                      <input type="number" placeholder="Amount">
+                    </div>
                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                       <span class="material-symbols-outlined">
                       add_shopping_cart
@@ -705,6 +742,9 @@
                         <span class="text-danger">$6.5</span>
                       </div>
                     </p>
+                    <div class="input mb-2">
+                      <input type="number" placeholder="Amount">
+                    </div>
                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                       <span class="material-symbols-outlined">
                       add_shopping_cart
@@ -731,6 +771,9 @@
                         <span class="text-danger">$6.5</span>
                       </div>
                     </p>
+                    <div class="input mb-2">
+                      <input type="number" placeholder="Amount">
+                    </div>
                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                       <span class="material-symbols-outlined">
                       add_shopping_cart
