--- a/shop.html
+++ b/shop.html
@@ -104,8 +104,8 @@
         <div class="container py-5">
             <div class="row g-5">
                 <!-- side bar  -->
-                <div class="col-lg-3">
-                  <div class="sidebar">
+                <div class="col-lg-3 ">
+                  <div class="sidebar ">
                     <div class="top-sidebar">
                       <h3 class="my-2">Product Categories</h3>
                       <div class="sidebar-items">
@@ -322,6 +322,9 @@
                                         <span class="text-danger">$6.5</span>
                                         </div>
                                     </p>
+                                    <div class="input mb-2">
+                                      <input type="number" placeholder="Amount">
+                                    </div>
                                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                                         <span class="material-symbols-outlined">
                                         add_shopping_cart
@@ -348,6 +351,9 @@
                                         <span class="text-danger">$6.5</span>
                                         </div>
                                     </p>
+                                    <div class="input mb-2">
+                                      <input type="number" placeholder="Amount">
+                                    </div>
                                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                                         <span class="material-symbols-outlined">
                                         add_shopping_cart
@@ -374,6 +380,9 @@
                                         <span class="text-danger">$6.5</span>
                                         </div>
                                     </p>
+                                    <div class="input mb-2">
+                                      <input type="number" placeholder="Amount">
+                                    </div>
                                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                                         <span class="material-symbols-outlined">
                                         add_shopping_cart
@@ -400,6 +409,9 @@
                                         <span class="text-danger">$6.5</span>
                                         </div>
                                     </p>
+                                    <div class="input mb-2">
+                                      <input type="number" placeholder="Amount">
+                                    </div>
                                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                                         <span class="material-symbols-outlined">
                                         add_shopping_cart
@@ -426,6 +438,9 @@
                                         <span class="text-danger">$6.5</span>
                                         </div>
                                     </p>
+                                    <div class="input mb-2">
+                                      <input type="number" placeholder="Amount">
+                                    </div>
                                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                                         <span class="material-symbols-outlined">
                                         add_shopping_cart
@@ -452,6 +467,9 @@
                                         <span class="text-danger">$6.5</span>
                                         </div>
                                     </p>
+                                    <div class="input mb-2">
+                                      <input type="number" placeholder="Amount">
+                                    </div>
                                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                                         <span class="material-symbols-outlined">
                                         add_shopping_cart
@@ -484,6 +502,9 @@
                                         <span class="text-danger">$6.5</span>
                                         </div>
                                     </p>
+                                    <div class="input mb-2">
+                                      <input type="number" placeholder="Amount">
+                                    </div>
                                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                                         <span class="material-symbols-outlined">
                                         add_shopping_cart
@@ -510,6 +531,9 @@
                                         <span class="text-danger">$6.5</span>
                                         </div>
                                     </p>
+                                    <div class="input mb-2">
+                                      <input type="number" placeholder="Amount">
+                                    </div>
                                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                                         <span class="material-symbols-outlined">
                                         add_shopping_cart
@@ -536,6 +560,9 @@
                                         <span class="text-danger">$6.5</span>
                                         </div>
                                     </p>
+                                    <div class="input mb-2">
+                                      <input type="number" placeholder="Amount">
+                                    </div>
                                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                                         <span class="material-symbols-outlined">
                                         add_shopping_cart
@@ -562,6 +589,9 @@
                                         <span class="text-danger">$6.5</span>
                                         </div>
                                     </p>
+                                    <div class="input mb-2">
+                                      <input type="number" placeholder="Amount">
+                                    </div>
                                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                                         <span class="material-symbols-outlined">
                                         add_shopping_cart
@@ -588,6 +618,9 @@
                                         <span class="text-danger">$6.5</span>
                                         </div>
                                     </p>
+                                    <div class="input mb-2">
+                                      <input type="number" placeholder="Amount">
+                                    </div>
                                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                                         <span class="material-symbols-outlined">
                                         add_shopping_cart
@@ -614,6 +647,9 @@
                                         <span class="text-danger">$6.5</span>
                                         </div>
                                     </p>
+                                    <div class="input mb-2">
+                                      <input type="number" placeholder="Amount">
+                                    </div>
                                     <a href="#" class="btn text-white d-flex align-items-center justify-content-center btn-success"> 
                                         <span class="material-symbols-outlined">
                                         add_shopping_cart
