--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
         <h2>About Us</h2>
       </div>
       <!-- Three columns of text below the carousel -->
-      <div class="row">
+      <div class="row h-100">
         <div class="col-lg-4">
           <svg
             class="bd-placeholder-img rounded-circle"
@@ -122,7 +122,7 @@
             Some representative placeholder content for the three columns of
             text below the carousel. This is the first column.
           </p>
-          <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+          <p><a class="btn btn-warning" href="#">View details &raquo;</a></p>
         </div>
         <!-- /.col-lg-4 -->
         <div class="col-lg-4">
@@ -144,7 +144,7 @@
             Another exciting bit of representative placeholder content. This
             time, we've moved on to the second column.
           </p>
-          <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+          <p><a class="btn btn-warning" href="#">View details &raquo;</a></p>
         </div>
         <!-- /.col-lg-4 -->
         <div class="col-lg-4">
@@ -166,7 +166,7 @@
             And lastly this, the third column of representative placeholder
             content.
           </p>
-          <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+          <p><a class="btn btn-warning" href="#">View details &raquo;</a></p>
         </div>
         <!-- /.col-lg-4 -->
       </div>
